@@ -1180,14 +1180,15 @@ $ cvtool unsharpmask -u smoothsmooth.pnm -c 0.7 < smooth.pnm > sharp.pnm
 @cmindex wavelets
 @code{wavelets -t|--task=dwt -D|--daubechies=@var{D}-l|--level=@var{l}}@*
 @code{wavelets -t|--task=idwt -D|--daubechies=@var{D} -l|--level=@var{l}}@*
+@code{wavelets -t|--task=hard-thresholding -D|--daubechies=@var{D} -l|--level=@var{l} -T|--threshold=@var{T}}
 @code{wavelets -t|--task=soft-thresholding -D|--daubechies=@var{D} -l|--level=@var{l} -T|--threshold=@var{T}}
 
 Perform Discrete Wavelet Transform (DWT), Inverse Discrete Wavelet transform
 (IDWT), or manipulations on transformed data.
 
 The parameter @var{D} chooses the Daubechies wavelet (D2, @dots{}, D20; only even numbers).
-The level @var{l} must be at least 1. The thresold parameter for soft thresholding must be from 
-[0,1]. It is applied to all input channels. The output of this command is always of type float;
+The level @var{l} must be at least 1. The threshold parameter for soft thresholding is
+applied to all input channels. The output of this command is always of type float;
 it has to be manually converted if necessary.
 
 Example:
